[package]
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "btanalyzer-toying"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
nrf52810-hal = {version = "0.14.1",  features = ["rt"]}
embedded-hal = {version = "0.2.6",  features = ["unproven"]}
heapless = "0.7.9"


# this lets you use `cargo fix`!
[[bin]]
name = "btanalyzer-toying"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
